--- a/style/master.scss
+++ b/style/master.scss
@@ -1,9 +1,17 @@
 //this is compiled and changed to css
 //all we need to compile is what's in this master file
+
+//Things have to go in this order
+//import first to access these
 @import "bootstrap/functions";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
+//our custom theming of bootstrap
 @import "theme.scss";
 
-@import "bootstrap/bootstrap.scss"
+//bootstrap
+@import "bootstrap/bootstrap.scss";
+
+//style overwriting bootstrap
+@import "style.scss";
