--- a/style/dist.css
+++ b/style/dist.css
@@ -4,14 +4,6 @@ button.btn {
 button.btn-danger:hover {
   background-color: skyblue; }
 
-button.btn-primary {
-  background-color: skyblue;
-  border: 1px solid skyblue; }
-
-button.btn-danger {
-  background-color: #ffc107;
-  border: 1px solid #ffc107; }
-
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
@@ -3300,7 +3292,7 @@ input[type="button"].btn-block {
 .navbar-light .navbar-nav .nav-link {
   color: rgba(0, 0, 0, 0.5); }
   .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-    color: rgba(0, 0, 0, 0.7); }
+    color: sienna; }
   .navbar-light .navbar-nav .nav-link.disabled {
     color: rgba(0, 0, 0, 0.3); }
 .navbar-light .navbar-nav .show > .nav-link,
@@ -7624,5 +7616,24 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 p {
   text-align: justify; }
+
+body {
+  font-family: 'Major Mono Display', monospace;
+  background-color: #f8f9fa;
+  border: 1rem solid white; }
+
+img {
+  border: none;
+  box-shadow: 2px 2px 5px black; }
+
+h1,
+p {
+  text-shadow: 2px 2px 5px black; }
+
+@media (min-width: 0px) {
+  .carousel-multi-item-2 .col-md-3 {
+    float: left;
+    width: 25%;
+    max-width: 100%; } }
 
 /*# sourceMappingURL=dist.css.map */
