removed text-align: justify from paragraph

--- a/style/style.scss
+++ b/style/style.scss
@@ -1,8 +1,8 @@
 // This file is for everything that comes after bootstrap; it's not a bootstrap 
 // variable because it's not in theme
-p {
-    text-align: justify;
-}
+// p {
+//     text-align: justify;
+// }
 
 body {
     font-family: 'Major Mono Display', monospace;
