--- a/style/style.scss
+++ b/style/style.scss
@@ -7,7 +7,7 @@
 body {
     font-family: 'Major Mono Display', monospace;
     background-color: $light;
-    border: 1rem solid white;
+    border: 1rem solid black;
 }
 
 img {
